Move plugin versions up to root-parent-pom